Don't set view_screen_rect_ on RequestMove ACK

In https://codereview.chromium.org/1894333002/ I made the OnRequestMoveAck
method reset the view_screen_rect_ variable to the pending rect. This was a
mistake because the move request is on the *window* rect, not the view rect.
Additionally, it's unnecessary since it's the browser's job to send an
UpdateScreenRects message to the renderer with the new view and window bounds.
This only happens for non-popup windows so popups will now store the view/window
rects immediately. This patch removes the reset in the Ack method.

In addition, the windowRect method confusingly returns the view_screen_rect or
pending_window_rect if there's a pending move. I've changed this to return the
window_screen_rect_ and added a viewRect method for callers that actually
expect the view. I also did some cleanup and replaced the redundant
RootWindowRect with windowRect.

BUG=638671

Review-Url: https://codereview.chromium.org/2333353002
Cr-Commit-Position: refs/heads/master@{#423030}

Former-commit-id: 6b08cd23a5bbe4e1d95bb7e0431fc743e6b0180c