content/renderer/render_view_impl.cc
@@ -2030,7 +2030,7 @@ void RenderViewImpl::resetInputMethod() {
 }
 
 blink::WebRect RenderViewImpl::rootWindowRect() {
-  return RenderWidget::RootWindowRect();
+  return RenderWidget::windowRect();
 }
 
 blink::WebScreenInfo RenderViewImpl::screenInfo() {
